// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convert-to-flat-config generator should add global gitignores 1`] = `
"const { FlatCompat } = require("@eslint/eslintrc");

const eslintrc = new FlatCompat({
    baseDirectory: __dirname
});

export default [
    {
        ignores: ["**/*"]
    },
    {
        ignores: ["ignore/me"]
    },
    {
        files: [
            "*.ts",
            "*.tsx",
            "*.js",
            "*.jsx"
        ],
        rules: {
            @nx/enforce-module-boundaries: [
                "error",
                {
                    enforceBuildableLibDependency: true,
                    allow: [],
                    depConstraints: [{
                            sourceTag: "*",
                            onlyDependOnLibsWithTags: ["*"]
                        }]
                }
            ]
        }
    },
    {
        files: [
            "*.ts",
            "*.tsx"
        ],
        extends: ["plugin:@nx/typescript"],
        rules: {}
    },
    {
        files: [
            "*.js",
            "*.jsx"
        ],
        extends: ["plugin:@nx/javascript"],
        rules: {}
    }
];
"
`;

exports[`convert-to-flat-config generator should run successfully 1`] = `
"const { FlatCompat } = require("@eslint/eslintrc");

const eslintrc = new FlatCompat({
    baseDirectory: __dirname
});

export default [
    {
        ignores: ["**/*"]
    },
    {
        ignores: ["node_modules"]
    },
    {
        files: [
            "*.ts",
            "*.tsx",
            "*.js",
            "*.jsx"
        ],
        rules: {
            @nx/enforce-module-boundaries: [
                "error",
                {
                    enforceBuildableLibDependency: true,
                    allow: [],
                    depConstraints: [{
                            sourceTag: "*",
                            onlyDependOnLibsWithTags: ["*"]
                        }]
                }
            ]
        }
    },
    {
        files: [
            "*.ts",
            "*.tsx"
        ],
        extends: ["plugin:@nx/typescript"],
        rules: {}
    },
    {
        files: [
            "*.js",
            "*.jsx"
        ],
        extends: ["plugin:@nx/javascript"],
        rules: {}
    }
];
"
`;

exports[`convert-to-flat-config generator should run successfully 2`] = `
"const baseConfig = require('../../.eslintrc.json');
const { FlatCompat } = require('@eslint/eslintrc');

const eslintrc = new FlatCompat({
  baseDirectory: __dirname,
});

export default [
  ...baseConfig,
  {
    ignores: ['!**/*'],
  },
  {
    files: ['*.ts', '*.tsx', '*.js', '*.jsx'],
    rules: {},
  },
  {
    files: ['*.ts', '*.tsx'],
    rules: {},
  },
  {
    files: ['*.js', '*.jsx'],
    rules: {},
  },
];
"
`;
